<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.satquizapp.ReadingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#263238"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:textColor="#D81B60"
                android:gravity="center"
                android:textSize="36sp"
                android:textStyle="bold"
                android:text="@string/read_title" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="16dp"
                android:textSize="18sp"
                android:textColor="#D81B60"
                android:textStyle="bold"
                android:text="@string/read_ques1" />

            <RadioGroup android:id="@+id/group1" xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <RadioButton android:id="@+id/radio1"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:background="#B3E5FC"
                    android:layout_marginBottom="8dp"
                    android:text="@string/read_one"
                    android:onClick="onRadioButtonClicked1"/>

                <RadioButton android:id="@+id/radio2"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:background="#B3E5FC"
                    android:layout_marginBottom="8dp"
                    android:text="@string/read_two"
                    android:onClick="onRadioButtonClicked1"/>

                <RadioButton android:id="@+id/radio3"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:background="#B3E5FC"
                    android:layout_marginBottom="8dp"
                    android:text="@string/read_three"
                    android:onClick="onRadioButtonClicked1"/>

                <RadioButton android:id="@+id/radio4"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:background="#B3E5FC"
                    android:layout_marginBottom="8dp"
                    android:text="@string/read_four"
                    android:onClick="onRadioButtonClicked1"/>
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textSize="18sp"
                android:textColor="#D81B60"
                android:textStyle="bold"
                android:text="@string/read_ques2" />

            <RadioGroup android:id="@+id/group2" xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton android:id="@+id/radio5"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:background="#B3E5FC"
                    android:layout_marginBottom="8dp"
                    android:text="@string/read_five"
                    android:onClick="onRadioButtonClicked2"/>

                <RadioButton android:id="@+id/radio6"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:background="#B3E5FC"
                    android:layout_marginBottom="8dp"
                    android:text="@string/read_six"
                    android:onClick="onRadioButtonClicked2"/>

                <RadioButton android:id="@+id/radio7"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:background="#B3E5FC"
                    android:layout_marginBottom="8dp"
                    android:text="@string/read_seven"
                    android:onClick="onRadioButtonClicked2"/>

                <RadioButton android:id="@+id/radio8"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:background="#B3E5FC"
                    android:layout_marginBottom="8dp"
                    android:text="@string/read_eight"
                    android:onClick="onRadioButtonClicked2"/>
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textSize="18sp"
                android:textColor="#D81B60"
                android:textStyle="bold"
                android:text="@string/read_ques3" />

            <RadioGroup android:id="@+id/group3" xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton android:id="@+id/radio9"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:background="#B3E5FC"
                    android:layout_marginBottom="8dp"
                    android:text="@string/read_nine"
                    android:onClick="onRadioButtonClicked3"/>

                <RadioButton android:id="@+id/radio10"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:background="#B3E5FC"
                    android:layout_marginBottom="8dp"
                    android:text="@string/read_ten"
                    android:onClick="onRadioButtonClicked3"/>

                <RadioButton android:id="@+id/radio11"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:background="#B3E5FC"
                    android:layout_marginBottom="8dp"
                    android:text="@string/read_eleven"
                    android:onClick="onRadioButtonClicked3"/>

                <RadioButton android:id="@+id/radio12"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:background="#B3E5FC"
                    android:layout_marginBottom="8dp"
                    android:text="@string/read_twelve"
                    android:onClick="onRadioButtonClicked3"/>
            </RadioGroup>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Find Score"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="36dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="16dp"
                    android:padding="8dp"
                    android:textSize="16dp"
                    android:textColor="#FFFFFF"
                    android:background="#FF9800"
                    android:onClick="submitScores"/>

                <TextView
                    android:id="@+id/read_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="sans-serif-light"
                    android:textSize="48sp"
                    android:textColor="#FF9800"
                    android:text="0" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Retake Quiz"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="36dp"
                    android:layout_marginBottom="16dp"
                    android:padding="8dp"
                    android:textSize="16dp"
                    android:textColor="#FFFFFF"
                    android:background="#FF9800"
                    android:onClick="resetScores"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
