<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#263238"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.android.satquizapp.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView1"
            android:background="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:src="@drawable/sat_6" />

        <EditText
            android:id="@+id/name_field"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="#FD8E09"
            android:textColorHint="#9E9E9E"
            android:hint="Name"
            android:inputType="textCapWords" />

    </RelativeLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#D81B60"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="36dp"
        android:text="@string/title"/>

    <TextView
        android:id="@+id/math"
        style="@style/CategoryStyle"
        android:textSize="24sp"
        android:layout_marginBottom="32dp"
        android:background="@color/category_math"
        android:text="@string/math"
        android:onClick="openMathQuiz"/>

    <TextView
        android:id="@+id/reading"
        style="@style/CategoryStyle"
        android:textSize="24sp"
        android:background="@color/category_reading"
        android:text="@string/reading"
        android:onClick="openReadingQuiz"/>


</LinearLayout>
